# axm-show

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml
.agent/: CARD.md
.github/workflows/: ci.yml  pages.yml
examples/: kemt_show_spec.json
server/: server.py
src/axm_show/: __init__.py  show_compile.py  show_schema.py
src/axm_show.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_show_compile.py
ui/: glass_onion_final.jsx
